# Guidance_mid

./: Dockerfile  README.md  start.sh
Linux_executables/: msa_set_score
guidance_Linux/: requirements.txt
guidance_Linux/script/: guidance_args_library.py  guidance_common_functions.py  guidance_program_call_functions.py  guidance_scoring_and_visualization.py  hot_cos_mafft_functions.py  mask_low_score_residues_webserver.py  time_decorator.py
guidance_Linux2/script/: config.py  guidance_args_library.py  guidance_main.py  guidance_sequence_functions.py  guidance_wrapper.py  hot_cos_file_handler.py
guidance_MacOS-arm64/: .gitignore  SharedConsts.py  SharedConsts.py.sav  index.html  requirements.txt
guidance_MacOS-arm64/script/: concat_aln_filelist_web.py  guidance_CONSTANTS.py  guidance_args_library.py  guidance_common_functions.py  guidance_main.py  guidance_program_call_functions.py  guidance_scoring_and_visualization.py  guidance_sequence_functions.py  guidance_tree_functions.py  guidance_wrapper.py  hot_cos_clustal_functions.py  hot_cos_clustalw_functions.py  hot_cos_logger.py  hot_cos_main.py  hot_cos_muscle_functions.py  hot_cos_prank_functions.py  hot_cos_tree.py  mask_low_score_residues.py  remove_pos_below_cutoff.py  remove_seq_below_cutoff.py  test_MAFFT_server_MSA_input.txt
guidance_MacOS-arm64/script/programs/msa_set_score/: CMakeLists.txt  count_functions.cpp  msa_set_score
logs/Guidance/: guidance.logv2
script/: guidance_common_functions.py  hot_cos_sequence.py  hot_cos_sequencing_method.py
test/: AGBL5.fas  AGMAT.fas
(+124 files in other folders)
